<br>
Limbo v2.2.2<br>
Option for Virtual FAT disk<br> 
Extra QEMU parameters<br>
Fixed issues with Removable Devices<br>
Added CPU types<br>
Several backend compatibility fixes<br>
Enabled KVM (NOT Tested)<br>
<br>

<br>
Limbo v2.2.1<br>
-Fixed lib loading issue for Jellybean<br>
<br>

<br>
Limbo v2.2<br>
-Fixed several Issues with SDL<br> 
-Enabled QMP Server for saving vm state<br>
<br>

<br>
Limbo v2.1 alpha<br>
-Added SDL interface<br>
-Misc Performance Enhancements<br>
<br>

<br>
Limbo v2.0<br>
-Rebase with Qemu 2.3.0<br>
-Hard FP support<br>
-Misc Performance Enhancements<br>
-SDL Support is not supported currently (coming soon)<br>
<br>

<br>
Limbo v0.9.9 (TBD)<br>
- Upgraded to glib 2.24<br>
- Modified env for easier targeting<br>
- Created ARMv7 build configuration<br>
- Compiled SDL for X86<br>
- Created x86 build configuration<br>
- Replaced qemu-img with hd image templates<br>
<br>

<br>
Limbo v0.9.8 (May 12, 2013)<br>
- Compatibility changes due to defects<br>
<br>

<br>
Limbo v0.9.7b (May 12, 2013)<br>
- Disabling TSC Feature (too buggy)<br>
This should fix multiple issues with the last update.<br>
<br>

<br>
Limbo v0.9.7 (May 3, 2013)<br>
- Fixed Removable Devices<br>
- Enabled TSC feature for Pentium+<br>
- Fixed some compatibility issues with JB<br>
- Using gcc 4.7 and -O3 and full ARM (no thumb)<br>
- Enable TAP interface (Experimental)<br>
- Alternative orientation<br>
- Switching to EGL1.1 for compatibility<br>
- Keep screen on<br>
<br>

<br>
Limbo v0.9.6 (Jan 30, 2013)<br>
- Fixed Boot parameters<br>
<br>

Limbo v0.9.5 (Jan 19, 2013)<br>
<br>
- Fixed Mouse relative position for SDL.<br>
- Enabled SMP mode (multi-core emulation).<br>
<br>

Limbo v0.9.4 (Jan 6, 2012)<br>
<br>
- Increased RAM Memory to 1GB.<br>
- New SDL User Interface.<br>
- Enabled External Mouse (Bluetooth).<br>
- Sound Emulation for SB16 (only under SDL Interface).<br>
- Fixed Keyboard CTRL,ALT keys and removed extra screens for VNC<br>
<br>

<br><br>