@@ -1,4 +1,9 @@
 <br>
+Limbo v2.2.3<br>
+-Fixed lib loading issue for Jellybean<br> 
+<br>
+
+<br>
 Limbo v2.2.2<br>
 Option for Virtual FAT disk<br> 
 Extra QEMU parameters<br>
